docker/airflow/logs/dag_id=dag_pipeline_query/run_id=manual__2025-03-03T06:22:48.623775+00:00/task_id=create_fact_sales/attempt=2.log
[2025-03-03T06:30:29.228+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_pipeline_query.create_fact_sales manual__2025-03-03T06:22:48.623775+00:00 [queued]>
[2025-03-03T06:30:29.254+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_pipeline_query.create_fact_sales manual__2025-03-03T06:22:48.623775+00:00 [queued]>
[2025-03-03T06:30:29.255+0000] {taskinstance.py:1308} INFO - Starting attempt 2 of 3
[2025-03-03T06:30:29.485+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_fact_sales> on 2025-03-03 06:22:48.623775+00:00
[2025-03-03T06:30:29.515+0000] {standard_task_runner.py:57} INFO - Started process 22636 to run task
[2025-03-03T06:30:29.520+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_pipeline_query', 'create_fact_sales', 'manual__2025-03-03T06:22:48.623775+00:00', '--job-id', '80', '--raw', '--subdir', 'DAGS_FOLDER/dag_pipeline_query.py', '--cfg-path', '/tmp/tmpl9ngn_db']
[2025-03-03T06:30:29.524+0000] {standard_task_runner.py:85} INFO - Job 80: Subtask create_fact_sales
[2025-03-03T06:30:29.716+0000] {logging_mixin.py:149} WARNING - /home/***/.local/lib/python3.7/site-packages/***/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2025-03-03T06:30:29.941+0000] {task_command.py:410} INFO - Running <TaskInstance: dag_pipeline_query.create_fact_sales manual__2025-03-03T06:22:48.623775+00:00 [running]> on host 9b8c8285a7ac
[2025-03-03T06:30:31.748+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Raffi' AIRFLOW_CTX_DAG_ID='dag_pipeline_query' AIRFLOW_CTX_TASK_ID='create_fact_sales' AIRFLOW_CTX_EXECUTION_DATE='2025-03-03T06:22:48.623775+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-03T06:22:48.623775+00:00'
[2025-03-03T06:30:31.749+0000] {sql.py:262} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS fact_sales AS
            SELECT * FROM (CREATE TABLE IF NOT EXISTS fact_sales AS
SELECT 
    ts.*,
    tp.product_name,
    tp.category AS product_category,
    tp.sub_category AS sub_category_product,
    tp.price,
    tps.disc,
    tps.event_name AS disc_name,
    CAST(
        CASE 
            WHEN tps.disc IS NOT NULL 
            THEN (tp.price * ts.quantity) - (tp.price * ts.quantity) * COALESCE(tps.disc, 0) / 100
            ELSE tp.price * ts.quantity
        END AS BIGINT
    ) AS amount
FROM tbl_sales ts 
LEFT JOIN tbl_product tp ON tp.id = ts.product_id 
LEFT JOIN tbl_promotions tps ON tps.time = DATE(ts.order_date)
WHERE ts.order_status = 2 
    AND ts.payment_status = 2 
    AND (ts.shipping_status = 2 OR ts.shipping_status IS NULL)
) AS subquery WHERE FALSE;

            TRUNCATE TABLE fact_sales;

            INSERT INTO fact_sales
            CREATE TABLE IF NOT EXISTS fact_sales AS
SELECT 
    ts.*,
    tp.product_name,
    tp.category AS product_category,
    tp.sub_category AS sub_category_product,
    tp.price,
    tps.disc,
    tps.event_name AS disc_name,
    CAST(
        CASE 
            WHEN tps.disc IS NOT NULL 
            THEN (tp.price * ts.quantity) - (tp.price * ts.quantity) * COALESCE(tps.disc, 0) / 100
            ELSE tp.price * ts.quantity
        END AS BIGINT
    ) AS amount
FROM tbl_sales ts 
LEFT JOIN tbl_product tp ON tp.id = ts.product_id 
LEFT JOIN tbl_promotions tps ON tps.time = DATE(ts.order_date)
WHERE ts.order_status = 2 
    AND ts.payment_status = 2 
    AND (ts.shipping_status = 2 OR ts.shipping_status IS NULL)
;
        
[2025-03-03T06:30:31.804+0000] {base.py:73} INFO - Using connection ID 'sales_project_conn' for task execution.
[2025-03-03T06:30:32.001+0000] {base.py:73} INFO - Using connection ID 'sales_project_conn' for task execution.
[2025-03-03T06:30:32.042+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS fact_sales AS
            SELECT * FROM (CREATE TABLE IF NOT EXISTS fact_sales AS
SELECT 
    ts.*,
    tp.product_name,
    tp.category AS product_category,
    tp.sub_category AS sub_category_product,
    tp.price,
    tps.disc,
    tps.event_name AS disc_name,
    CAST(
        CASE 
            WHEN tps.disc IS NOT NULL 
            THEN (tp.price * ts.quantity) - (tp.price * ts.quantity) * COALESCE(tps.disc, 0) / 100
            ELSE tp.price * ts.quantity
        END AS BIGINT
    ) AS amount
FROM tbl_sales ts 
LEFT JOIN tbl_product tp ON tp.id = ts.product_id 
LEFT JOIN tbl_promotions tps ON tps.time = DATE(ts.order_date)
WHERE ts.order_status = 2 
    AND ts.payment_status = 2 
    AND (ts.shipping_status = 2 OR ts.shipping_status IS NULL)
) AS subquery WHERE FALSE;

            TRUNCATE TABLE fact_sales;

            INSERT INTO fact_sales
            CREATE TABLE IF NOT EXISTS fact_sales AS
SELECT 
    ts.*,
    tp.product_name,
    tp.category AS product_category,
    tp.sub_category AS sub_category_product,
    tp.price,
    tps.disc,
    tps.event_name AS disc_name,
    CAST(
        CASE 
            WHEN tps.disc IS NOT NULL 
            THEN (tp.price * ts.quantity) - (tp.price * ts.quantity) * COALESCE(tps.disc, 0) / 100
            ELSE tp.price * ts.quantity
        END AS BIGINT
    ) AS amount
FROM tbl_sales ts 
LEFT JOIN tbl_product tp ON tp.id = ts.product_id 
LEFT JOIN tbl_promotions tps ON tps.time = DATE(ts.order_date)
WHERE ts.order_status = 2 
    AND ts.payment_status = 2 
    AND (ts.shipping_status = 2 OR ts.shipping_status IS NULL)
;
        , parameters: None
[2025-03-03T06:30:32.046+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 3:             SELECT * FROM (CREATE TABLE IF NOT EXISTS fact_s...
                                   ^

[2025-03-03T06:30:32.127+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_pipeline_query, task_id=create_fact_sales, execution_date=20250303T062248, start_date=20250303T063029, end_date=20250303T063032
[2025-03-03T06:30:32.383+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 80 for task create_fact_sales (syntax error at or near "CREATE"
LINE 3:             SELECT * FROM (CREATE TABLE IF NOT EXISTS fact_s...
                                   ^
; 22636)
[2025-03-03T06:30:32.425+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2025-03-03T06:30:32.579+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
